fix: layout issues in footer
this makes the subfooter to follow the design

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,3 +26,7 @@
 //     outline: 1px red solid !important;
 //     visibility: visible !important;
 // }
+
+html {
+    color-scheme: dark;
+}
